<resources>
    <string name="app_name">MealMatch</string>
    <string name="host">www.mealmatch.com</string>

    <string name="time">min</string>
    <string name="servings">servings</string>

    <string name="google_client_id">517111893133-gl3hn9799lm2ma3o9a8ccppqjkc4a1lq.apps.googleusercontent.com</string>

    <string name="ui_required_field">Field required</string>
    <string name="ui_not_valid_email">Invalid email-address</string>
    <string name="ui_password_minimum">Password needs at least 6 characters</string>
    <string name="ui_password_has_space">Password can not contain spaces</string>

    <string name="ui_account_created_successfully">Account created successfully</string>
    <string name="ui_signed_in">Logged in successfully</string>

    <string name="ui_reset_link_sent">Password reset link sent to your email</string>
    <string name="ui_intro_text">Finding something to cook has never been this easy.</string>
    <string name="no_internet">No internet connection, please try again.</string>
    <string name="request_limit">Request limit reached</string>
    <string name="ingredients">ingredients</string>
    <string name="no_instructions">No instructions</string>
    <string name="signout_confirmation">Are you sure you want to sign out?</string>
    <string name="cancel">Cancel</string>
    <string name="signout">Sign out</string>
    <string name="recipe_unsaved">Recipe removed from saved</string>
    <string name="recipe_saved">Recipe saved successfully</string>
    <string name="grocery_removed">Recipe removed from Groceries</string>
    <string name="grocery_added">Recipe added to Groceries</string>
    <string name="recipe_removed_cookbook">Recipe has been removed from cookbook</string>


    <string name="clear_all">Clear All</string>
    <string name="filter">Filter</string>
    <string name="dish_types">Dish Types</string>
    <string name="diets">Diets</string>
    <string name="intolerances">Intolerances</string>
    <string name="cuisines">Cuisines</string>
    <string name="show_results">Show Results</string>
    <string name="sign_up_with_email">Sign up with Email</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="create_an_account">Create an account</string>
    <string name="username">Username</string>
    <string name="sign_up">Sign up</string>
    <string name="add_to_cookbook">Add to cookbook</string>
    <string name="no_cookbooks">No cookbooks</string>
    <string name="cookbook_intro_text">Group your favorite recipes to suit you</string>
    <string name="create_a_cookbook">Create a cookbook</string>
    <string name="signing_you_in">Signing you in</string>
    <string name="add">Add</string>
    <string name="cookbook">Cookbook title</string>
    <string name="add_from_saved">Add from saved</string>
    <string name="groceries_intro">Add recipes to groceries and have an organized checklist of ingredients for each recipe.</string>
    <string name="discover_recipes">Discover recipes</string>
    <string name="cookbook_name">Cookbook name</string>
    <string name="cookbook_title_hint">Enter a name for this cookbook</string>
    <string name="create">Create</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="instructions">Instructions</string>
    <string name="search">Search</string>
    <string name="filters">Filters</string>
    <string name="retry_connection">Retry connection</string>
    <string name="no_internet_connection">No internet connection, try again later</string>
    <string name="items">items</string>
    <string name="ingredient_name">Ingredient name</string>
    <string name="equipment">Equipment:</string>
    <string name="directions">Directions:</string>
    <string name="load_more_n_recipes">Load More \n recipes</string>
    <string name="load_more_results">Load more results</string>
    <string name="groceries">Groceries</string>
    <string name="delete">Delete</string>
    <string name="popular">Popular</string>
    <string name="breakfast">Breakfast</string>
    <string name="load_more">Load More</string>
    <string name="about">About</string>
    <string name="edit_account_details_below">Edit account details below:</string>
    <string name="save">Save</string>
    <string name="cookbooks_intro">Group recipes in cookbooks to enjoy them all together later!</string>
    <string name="profile">Profile</string>
    <string name="recipes">Recipes</string>
    <string name="cookbooks">Cookbooks</string>
    <string name="saved">Saved</string>
    <string name="enjoy_your_meal">Enjoy your meal!</string>
    <string name="no_results">No results</string>
    <string name="no_more_results">No more results</string>
    <string name="swipe_right_on_recipes_to_save_them_all_saved_recipes_will_be_shown_here">Swipe right on recipes to save them. All saved recipes will be shown here.</string>
    <string name="start_swiping">Start swiping</string>
    <string name="select_all">Select all</string>

</resources>