<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.profile.cookbooks.NewCookbookFragment"
    tools:ignore="UnusedAttribute">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:backgroundTint="@color/white"
        app:elevation="5dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:title="Create cookbook"/>

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/board_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/cookbook_name"
        android:textAllCaps="true"
        android:textFontWeight="500" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/il_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        app:errorEnabled="true"
        app:boxBackgroundColor="@color/transparent"
        app:counterEnabled="true"
        app:hintEnabled="false"
        app:counterMaxLength="40">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cookbook_title_hint"
            android:paddingVertical="10dp"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:backgroundTint="@color/dark_grey"
        android:text="@string/create"
        android:layout_marginHorizontal="20dp"/>

</LinearLayout>