<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:ignore="ContentDescription,UnusedAttribute,RelativeOverlap">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/product_sans"
        android:text="@string/add_to_cookbook"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textFontWeight="500" />

    <ImageView
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="8dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:src="@drawable/ic_add"
        app:tint="@color/black" />

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/title"
        android:background="@color/light_grey" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/line" />

    <LinearLayout
        android:id="@+id/empty_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/line"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            app:cardBackgroundColor="@color/dark_grey"
            app:cardCornerRadius="5dp"
            app:contentPadding="5dp">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@color/white"
                android:elevation="10dp"
                android:src="@drawable/ic_board"
                app:tint="@color/dark_grey" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/no_cookbooks"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textFontWeight="500" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:letterSpacing="0.03"
            android:text="@string/cookbook_intro_text"
            android:textColor="@color/black"
            android:textSize="12sp" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="15dp"
            android:text="@string/create_a_cookbook"
            app:backgroundTint="@color/dark_grey"
            app:cornerRadius="2dp" />

    </LinearLayout>

</RelativeLayout>