<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.profile.EditProfileFragment"
    tools:ignore="UnusedAttribute">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="Account" />

    </com.google.android.material.appbar.AppBarLayout>


    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/image"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_below="@id/appbar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:scaleType="centerCrop"
        android:src="@drawable/example_profile_pic"
        app:riv_border_color="@color/blue"
        app:riv_border_width="2dp"
        app:riv_corner_radius="120dp" />

    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_account_details_below"
        android:layout_marginTop="20dp"
        android:paddingHorizontal="20dp"
        android:layout_below="@id/image" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username_layout"
        android:layout_below="@id/text"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        app:errorIconDrawable="@null"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        app:hintTextColor="@color/blue"
        app:counterMaxLength="15">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="textCapSentences"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_layout"
        android:layout_below="@id/username_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginHorizontal="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        app:errorIconDrawable="@null"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        android:enabled="false"
        app:hintTextColor="@color/blue">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"/>
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/email_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:paddingHorizontal="60dp"
        android:text="@string/save" />
</RelativeLayout>