<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.intro.SignUpActivity"
    tools:ignore="ContentDescription">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.1"
        android:scaleType="centerCrop"
        android:src="@drawable/image_back" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <androidx.cardview.widget.CardView
                android:id="@+id/cardview"
                app:cardElevation="2dp"
                app:cardCornerRadius="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingVertical="20dp">

                    <TextView
                        android:id="@+id/title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginHorizontal="20dp"
                        android:text="@string/create_an_account"
                        android:textSize="30sp" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textfield_username"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/title"
                        android:layout_marginHorizontal="20dp"
                        android:layout_marginTop="30dp"
                        android:hint="@string/username"
                        app:endIconMode="clear_text"
                        app:hintTextColor="@color/blue"
                        app:errorEnabled="true"
                        app:startIconDrawable="@drawable/ic_person">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_username"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textfield_email"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/textfield_username"
                        android:layout_marginHorizontal="20dp"
                        android:layout_marginTop="5dp"
                        android:hint="@string/email"
                        app:endIconMode="clear_text"
                        app:errorEnabled="true"
                        app:hintTextColor="@color/blue"
                        app:startIconDrawable="@drawable/ic_email">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textEmailAddress" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textfield_password"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/textfield_email"
                        android:layout_marginHorizontal="20dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="20dp"
                        app:errorEnabled="true"
                        android:hint="@string/password"
                        app:endIconMode="password_toggle"
                        app:hintTextColor="@color/blue"
                        app:startIconDrawable="@drawable/ic_lock">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword" />

                    </com.google.android.material.textfield.TextInputLayout>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                app:elevation="3dp"
                android:textColor="@color/white"
                android:layout_marginHorizontal="50dp"
                android:padding="13dp"
                app:cornerRadius="40dp"
                android:layout_marginTop="-30dp"/>



        </LinearLayout>

    </ScrollView>


</RelativeLayout>